hotdoc.generate_doc('libesmtp',
                    project_version : libesmtp_version,
                    sitemap: 'sitemap.txt',
                    c_index: 'index.md',
                    index: 'index.md',
                    c_sources : sources,
                    languages : ['c'],
		    verbose : true,
                    install : true)
